--- a/app/views/dungeons/index.html.haml
+++ b/app/views/dungeons/index.html.haml
@@ -1,2 +1,11 @@
-%h1 Dungeons#index
-%p Find me in app/views/dungeons/index.html.haml
+%h1 Dungeons
+
+- if @dungeons.empty?
+  %p Nothing here.
+- else
+  - @dungeons.in_groups_of(3, false) do |group|
+    .row.dungeons-row
+      - group.each do |dungeon|
+        .col-md-4
+          %a{target: :_blank, href: dungeon_path(dungeon)}
+            = image_tag dungeon.image.thumb('300x200').url
