--- a/app/views/dungeons/index.html.haml
+++ b/app/views/dungeons/index.html.haml
@@ -1,5 +1,3 @@
-%h1 Dungeons
-
 - if @dungeons.empty?
   %p Nothing here.
 - else
@@ -7,5 +5,4 @@
     .row.dungeons-row
       - group.each do |dungeon|
         .col-md-4
-          %a{href: dungeon_path(dungeon)}
-            = image_tag dungeon.image.thumb('300x200').url
+          = render dungeon, short: true
