--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -3,4 +3,5 @@
 / - else
 /   %li= link_to 'Sign in', signin_path
 
+%li= link_to 'Latest bases', latest_dungeons_path
 %li= link_to 'Add your base', new_dungeon_path
