UPD preview size

--- a/app/views/dungeons/_dungeon.html.haml
+++ b/app/views/dungeons/_dungeon.html.haml
@@ -1,6 +1,6 @@
 - if local_assigns[:short]
   %a{href: dungeon_path(dungeon)}
-    = image_tag dungeon.image.thumb('300x200#').url
+    = image_tag dungeon.image.thumb('300x200>').url
   = render partial: 'votes', locals: { dungeon: dungeon }
 - else
   .dungeons-row
@@ -8,10 +8,10 @@
       %h3= dungeon.title
     %p
       %a{target: :_blank, href: dungeon.image.url}
-        = image_tag dungeon.image.thumb('400x300#').url if dungeon.image_stored?
+        = image_tag dungeon.image.thumb('400x300>').url if dungeon.image_stored?
       - dungeon.photos.each do |photo|
         %a{target: :_blank, href: photo.image.url}
-          = image_tag photo.image.thumb('400x300#').url if photo.image_stored?
+          = image_tag photo.image.thumb('400x300>').url if photo.image_stored?
       - if dungeon.description.present?
         .description.text-center
           = markdown(dungeon.description)
