--- a/app/views/dungeons/_dungeon.html.haml
+++ b/app/views/dungeons/_dungeon.html.haml
@@ -1,16 +1,17 @@
 - if local_assigns[:short]
-  %a{href: dungeon_path(dungeon)}
+  %a{href: dungeon.image.url, data: {lightbox: "dungeon-#{dungeon.id}"}}
     = image_tag dungeon.image.thumb('300x200>').url
-  = render partial: 'votes', locals: { dungeon: dungeon }
+  - dungeon.photos.each do |photo|
+    %a{href: photo.image.url, data: {lightbox: "dungeon-#{dungeon.id}"}}
 - else
   .dungeons-row
     - if dungeon.title.present?
       %h3= dungeon.title
     %p
-      %a{target: :_blank, href: dungeon.image.url}
+      %a{target: :_blank, href: dungeon.image.url, data: {lightbox: "dungeon-#{dungeon.id}"}}
         = image_tag dungeon.image.thumb('400x300>').url if dungeon.image_stored?
       - dungeon.photos.each do |photo|
-        %a{target: :_blank, href: photo.image.url}
+        %a{target: :_blank, href: photo.image.url, data: {lighbox: "dungeon-#{dungeon.id}"}}
           = image_tag photo.image.thumb('400x300>').url if photo.image_stored?
       - if dungeon.description.present?
         .description.text-center
