--- a/app/views/dungeons/_dungeon.html.haml
+++ b/app/views/dungeons/_dungeon.html.haml
@@ -3,6 +3,7 @@
     = image_tag dungeon.image.thumb('300x200>').url
   - dungeon.photos.each do |photo|
     %a{href: photo.image.url, data: {lightbox: "dungeon-#{dungeon.id}", title: dungeon.title}}
+  = render partial: 'votes', locals: { dungeon: dungeon }
 - else
   .dungeons-row
     - if dungeon.title.present?
