--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,13 +1,26 @@
--# navigation styled for Bootstrap 3.0
 %nav.navbar.navbar-default.navbar-fixed-top
   .container
     .navbar-header
-      %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
+      %button.navbar-toggle.collapsed{"data-target" => "#main-navbar", "data-toggle" => "collapse", :type => "button"}
         %span.sr-only Toggle navigation
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'Best bases', root_path, class: 'navbar-brand'
-    .collapse.navbar-collapse
+      %a.navbar-brand{:href => "/"}
+        %img{alt: '', src: image_path('kot_small.png')}
+    #main-navbar.collapse.navbar-collapse
       %ul.nav.navbar-nav
-        = render 'layouts/navigation_links'
+        %li{class: (:active if current_page == :dungeons && @mode == :best)}
+          %a{href: best_dungeons_path}
+            Best
+        %li{class: (:active if current_page == :dungeons && @mode == :latest)}
+          %a{href: latest_dungeons_path} Latest
+        %li.dropdown
+          %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+            = current_level
+            %span.caret
+          %ul.dropdown-menu{:role => "menu"}
+            %li{class: (:active if @level.blank?)}= link_to('All levels', dungeons_path)
+            %li.divider
+            - Dungeon::LEVELS.each do |num, title|
+              %li{class: (:active if @level == num)}= link_to("[#{num}] #{title}", url_for(controller: :dungeons, action: (@mode == :latest ? :latest : :index), level: num))
